# my-music

./: .env.sample  .gitignore  Cargo.toml  README.md
src/: README.md  cache.rs  events.rs  main.rs
src/apis/: spotify.rs
src/managers/: command.rs  mod.rs  stats.rs
src/slashcmds/: about.rs  invite.rs  mod.rs
src/slashcmds/spotify/: cover.rs  listening.rs  mod.rs  track.rs
src/tests/: mod.rs
src/utils/: blocklist.rs  constants.rs  mod.rs  spotify.rs
src/utils/discordhelpers/: embeds.rs  interactions.rs  mod.rs
